fixed button overlap in french option sets form

--- a/app/assets/stylesheets/all/option_sets.css.scss
+++ b/app/assets/stylesheets/all/option_sets.css.scss
@@ -20,7 +20,7 @@ form.option_set_form {
 
 
     ul {
-      width: 360px;
+      width: 320px;
     }
 
     input[type=text] {
@@ -31,6 +31,7 @@ form.option_set_form {
       vertical-align: top;
       margin-left: 5px;
       display: inline-block;
+      width: 92px;
     }
   }
 
